# UrbiOpenNIKinect

./: .gitignore  CMakeLists.txt  README
NITE_Data/: Sample-Scene.xml  Sample-Tracking.xml
cmake/: FindOpenNI.cmake
src/: CMakeLists.txt  KinectMotors.cpp  KinectMotors.h  OpenNiKinectSingelton.cpp  OpenNiKinectSingelton.h  RawKinect.cpp  RawKinect.h  UKinectCamera.cpp  UKinectCamera.h  UKinectDepth.cpp  UKinectDepth.h  UKinectModule.cpp  UKinectModule.h  UKinectOpenNI.cpp  UKinectOpenNI.h  UKinectUser.cpp  UKinectUser.h  uopennikinect.h
src/OpenNI/: CMakeLists.txt  Kinect.cpp  Kinect.h
